# python-boilerplate

./: .dockerignore  .env-example  Dockerfile.kubernetes  Dockerfile.lambda  Makefile  README.md  main.job.py  main.service.py  pyproject.toml
.github/workflows/: development.yaml  production.yaml
libs/: my_libs.py
scripts/: job.py
