[tool.poetry]
name = "python-boilerplate"
version = "0.1.0"
description = ""
authors = ["ASX <mragungsetiaji@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
ipython = "^8.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
